# OMICRON-GNURadio

./: .gitignore  README.md  ofdm_tx_rx.grc
OFDM/: .gitignore  chat_ofdm.grc  chat_ofdm_simulation.grc  fec_tagged_example.grc  ldpc_encode_example.grc  ofdm_audio_tx_rx.grc  ofdm_files_rx.grc  ofdm_files_tx.grc  ofdm_files_tx_rx.grc  packed_ofdm_audio_rx.grc  packed_ofdm_audio_tx.grc  packed_ofdm_files_rx.grc  packed_ofdm_files_tx.grc  packed_ofdm_files_tx_rx.grc  preamble_maker.py  prueba_tx.txt  simple_ofdm_audio_rx.grc  simple_ofdm_audio_tx.grc  simple_ofdm_audio_tx_rx.grc  simple_ofdm_files_rx.grc  simple_ofdm_files_tx.grc  simple_ofdm_files_tx_rx.grc  simple_tx_rx.grc
Tutorial2/: tutorial2.grc
Tutorial3/: if_else.py  multiplyBlock.grc  multiplyBlock.py  qpsk_complete.grc  qpsk_complete.py  qpsk_demod.grc  qpsk_demod.py  top_block.py
Tutorial3/gr-python_tutorial/: CMakeLists.txt  MANIFEST.md
Tutorial4/: cpp_qpsk_demod.grc  top_cpp_qpsk_demod.py
Tutorial5/: qpsk_tagged.grc  qpsk_tagged.py  tags.py  tags_propagation.grc  tags_propagation.py
Tutorial6/: spectrum_analyzer.grc  transmiting_qpsk.grc
Tutorial7/: mpsk_stage4_lms.grc  mpsk_stage6.grc  solution.grc
Tutorials/Tutorial2/: tutorial_two.py
Tutorials/Tutorial3/: if_else.grc  if_else_mod.py  qpsk_demod.grc
Tutorials/Tutorial4/: cpp_qpsk_demod.grc
Tutorials/Tutorial5/: mychat.grc  qpsk_tagged.grc  qpsk_tagged.py  tags.grc
Tutorials/Tutorial6/: fm_receiver.grc  qpsk_modulating.grc  spectrum_analyzer.grc  transmiting_qpsk.grc
Tutorials/Tutorial7/: mpsk_stage1.grc  mpsk_stage2.grc  mpsk_stage3.grc  mpsk_stage4.grc  mpsk_stage5.grc
WiFi/: audio_loopback.grc  files_loopback.grc  files_rx.grc  files_tx.grc  manual_modulation.grc  wifi_freq_adap_phy_hier.grc  wifi_transceiver.grc
experiments/: .gitignore  autoExp.py  auto_simulation.py  display.py  display_delay.py  display_eff.py  display_encoding.py  display_info.py  display_per.py  display_per_eff.py  display_rate.py  display_rbvar.py  display_snr.py  freq_adapt_rx.grc  freq_adapt_tx.grc  get_channel_snr_var.py  mv_exp_files.sh  rb_snr.py  simpl_rx.grc  simpl_tx.grc  snr_class.py  time_adapt_rx.grc  time_adapt_tx.grc
experiments/FreqAdapt/: freq_adapt_rx.grc  freq_adapt_tx.grc  freq_encoding_rx.csv  freq_encoding_tx.csv  freq_rate.csv  freq_rx_data.txt  freq_snr_rx.csv  freq_snr_tx.csv  freq_wifi_frame_delay_rx.csv  freq_wifi_frame_delay_tx.csv  resume_info.sh
experiments/Simple/: resume_info.sh  simpl_rx.grc  simpl_tx.grc  simple_encoding_rx.csv  simple_encoding_tx.csv  simple_rate.csv  simple_rx_data.txt  simple_snr_rx.csv  simple_snr_tx.csv  simple_wifi_frame_delay_rx.csv  simple_wifi_frame_delay_tx.csv
experiments/TimeAdapt/: resume_info.sh  time_adapt_rx.grc  time_adapt_tx.grc  time_encoding.csv  time_encoding_rx.csv  time_encoding_tx.csv  time_rate.csv  time_rx_data.txt  time_snr.csv  time_snr_rx.csv  time_snr_tx.csv  time_wifi_frame_delay.csv  time_wifi_frame_delay_rx.csv  time_wifi_frame_delay_tx.csv
gr-GNU_tutorials/: CMakeLists.txt  MANIFEST.md
gr-GNU_tutorials/docs/: README.GNU_tutorials
gr-GNU_tutorials/grc/: CMakeLists.txt  GNU_tutorials_multiply_ff_py.xml  GNU_tutorials_my_qpsk_demod_cb.xml  (+3 more)
gr-adaptativeOFDM/: CMakeLists.txt  MANIFEST.md
gr-adaptiveOFDM/: .gitignore  CMakeLists.txt  MANIFEST.md  Makefile
gr-adaptiveOFDM/lib/: CMakeLists.txt  constellations_impl.cc  constellations_impl.h  decode_mac.cc  frame_equalizer_impl.cc  frame_equalizer_impl.h  mac_and_parse_impl.cc  mac_and_parse_impl.h  mac_impl.cc  mac_impl.h  mapper_impl.cc  mapper_impl.h  parse_mac_impl.cc  parse_mac_impl.h  qa_adaptiveOFDM.cc  qa_adaptiveOFDM.h  qa_mac.cc  qa_mac.h  qa_parse_mac.cc  qa_parse_mac.h  test_adaptiveOFDM.cc  utils.cc  utils.h
gr-adaptiveOFDM/lib/equalizer/: base.cc  base.h  comb.cc  comb.h  lms.cc  lms.h  ls.cc  ls.h  sta.cc  sta.h
gr-adaptiveOFDM/lib/viterbi_decoder/: base.cc  base.h  viterbi_decoder.h  viterbi_decoder_generic.cc  viterbi_decoder_generic.h  viterbi_decoder_x86.cc  viterbi_decoder_x86.h
gr-freqAdaptiveOFDM/: .gitignore  CMakeLists.txt  MANIFEST.md
gr-frequencyAdaptiveOFDM/: CMakeLists.txt  MANIFEST.md  Makefile
gr-frequencyAdaptiveOFDM/grc/: CMakeLists.txt  frequencyAdaptiveOFDM_chunks_to_symbols.xml  frequencyAdaptiveOFDM_decode_mac.xml  frequencyAdaptiveOFDM_display_rate_file.xml  frequencyAdaptiveOFDM_frame_equalizer.xml  frequencyAdaptiveOFDM_mac.xml  frequencyAdaptiveOFDM_mac_and_parse.xml  frequencyAdaptiveOFDM_mapper.xml  frequencyAdaptiveOFDM_parse_mac.xml  frequencyAdaptiveOFDM_rb_const_demux.xml  frequencyAdaptiveOFDM_rb_const_demux_stream.xml  frequencyAdaptiveOFDM_signal_field.xml  frequencyAdaptiveOFDM_write_frame_data.xml
gr-frequencyAdaptiveOFDM/lib/: CMakeLists.txt  chunks_to_symbols_impl.cc  chunks_to_symbols_impl.h  constellations_impl.cc  constellations_impl.h  decode_mac_impl.cc  decode_mac_impl.cc.FUNCIONA  decode_mac_impl.h  frame_equalizer_impl.cc  frame_equalizer_impl.cc.FUNCIONA  frame_equalizer_impl.h  frame_equalizer_impl_1symb.cc  frame_equalizer_impl_1symbs.h  frame_equalizer_impl_2symb.h  mac_and_parse_impl.cc  mac_and_parse_impl.h  mac_and_parse_impl_modificado.cc  mac_impl.cc  mac_impl.h  mapper_impl.cc  mapper_impl.cc.FUNCIONA  mapper_impl.h  parse_mac_impl.cc  parse_mac_impl.h  qa_frequencyAdaptiveOFDM.cc  qa_frequencyAdaptiveOFDM.h  qa_signal_field.cc  qa_signal_field.h  rb_const_demux_impl.cc  rb_const_demux_impl.h  signal_field.cc  signal_field_impl.cc  signal_field_impl.h  signal_field_impl_1symbol.cc  signal_field_impl_2symbol.cc  test_frequencyAdaptiveOFDM.cc  utils..cc.FUNCIONA  utils.cc  utils.h
gr-frequencyAdaptiveOFDM/lib/equalizer/: base.cc  base.h  comb.cc  comb.h  lms.cc  lms.h  ls.cc  ls.h  sta.cc  sta.h
gr-frequencyAdaptiveOFDM/lib/viterbi_decoder/: base.cc  base.h  viterbi_decoder.h  viterbi_decoder_generic.cc  viterbi_decoder_generic.h  viterbi_decoder_x86.cc  viterbi_decoder_x86.h
resources/: install_dependencies.sh  install_modules.sh  meassure_sim_chan.py  preamble_maker.py  prueba_tx.txt
tutorial4/: cpp_qpsk_demod.grc
(+246 files in other folders)
